# fcitxconfig

./: AUTHORS  CMakeLists.txt  Doxyfile  Messages.sh  kcm_fcitxconfig.spec  kde4-kcm_fcitxconfig.spec
po/: CMakeLists.txt  kcm_fcitxconfig.pot
po/zh_CN/: kcm_fcitxconfig.po
src/: .directory  CMakeLists.txt  fcitxconfig.cpp  fcitxconfig.desktop  fcitxconfig.h  tabdialog.cpp  tabdialog.h
